[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sshm"
version = "0.1.0"
description = "SSH config manager CLI to add/remove/list ssh config entries"
readme = "README.md"
authors = [
    { name = "David Hoeck" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "tabulate>=0.9"
]

[project.scripts]
sshm = "sshm:main" 